--- a/src/main/resources/templates/admin/addpurchase.html
+++ b/src/main/resources/templates/admin/addpurchase.html
@@ -306,7 +306,7 @@
                                         <button type="submit" class="btn btn-success">Submit</button>
                                     </div>
                                 </div>
-
+                                </div>
                             </form>
                         </div>
                     </div>
