--- a/src/main/resources/templates/admin/sales.html
+++ b/src/main/resources/templates/admin/sales.html
@@ -64,6 +64,14 @@
 
               <input type="hidden" name="id" th:field="*{id}"/>
 
+            <div class="form-group">
+                        <label class="control-label col-md-3 col-sm-3 col-xs-12" for="customerName">Invoice Number <span class="required">*</span>
+                        </label>
+                        <div class="col-md-6 col-sm-6 col-xs-12">
+                            <input type="text" name="invoiceno" th:value="${billnumber}" readonly="true" required="required" class="form-control col-md-7 col-xs-12">
+                        </div>
+            </div>
+
               <div class="form-group">
                   <label class="control-label col-md-3 col-sm-3 col-xs-12" for="customerName">Customer Name <span class="required">*</span>
                   </label>
